Revert modsecurity logging to stdout
Detections are written to  nginx error log as well as more detailed written to modsecurity_audit.log. Since nginx error log is already written to stderr, any detection will already be shown in the addon logs

--- a/nginx_proxy/data/modsec/modsecurity.conf
+++ b/nginx_proxy/data/modsec/modsecurity.conf
@@ -228,7 +228,7 @@ SecAuditLogParts ABCEFHJKZ
 # assumes that you will use the audit log only ocassionally.
 #
 SecAuditLogType Serial
-SecAuditLog /dev/stdout
+SecAuditLog /var/log/modsec_audit.log
 
 # Specify the path for concurrent audit logging.
 #SecAuditLogStorageDir /opt/modsecurity/var/audit/
