fix change for tests

--- a/ssh/config.json
+++ b/ssh/config.json
@@ -35,5 +35,5 @@
       "tcp_forwarding": "bool"
     }
   },
-  "_image": "homeassistant/{arch}-addon-ssh"
+  "image": "homeassistant/{arch}-addon-ssh"
 }
