--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -5,15 +5,7 @@ FROM $BUILD_FROM
 ARG LIBWEBSOCKETS_VERSION
 ARG TTYD_VERSION
 RUN \
-    apk add --no-cache --virtual .build-dependencies \
-        bsd-compat-headers \
-        build-base \
-        cmake \
-        json-c-dev \
-        libuv-dev \
-        openssl-dev \
-        zlib-dev \
-    \
+    set -x \ 
     && apk add --no-cache \
         bash-completion \
         pulseaudio-utils \
@@ -28,9 +20,19 @@ RUN \
         tmux \
         vim \
     \
+    && apk add --no-cache --virtual .build-dependencies \
+        bsd-compat-headers \
+        build-base \
+        linux-headers \
+        cmake \
+        json-c-dev \
+        libuv-dev \
+        openssl-dev \
+        zlib-dev \
+    \
     && sed -i "s/ash/bash/" /etc/passwd \
     \
-    && git clone --branch "${LIBWEBSOCKETS_VERSION}" --depth=1 \
+    && git clone --branch "v${LIBWEBSOCKETS_VERSION}" --depth=1 \
         https://github.com/warmcat/libwebsockets.git /tmp/libwebsockets \
     \
     && mkdir -p /tmp/libwebsockets/build \
