Update config.json, DOCS, and Docker for for nginx_proxy
- Document workarounds for ModSecurity false positives
- Add 3 exclusions for false positives on common Home Assistant functionality
- Use v3/master branch for compiling ModSecurity that includes some fixes for memory leaks that aren't part of a release yet
- Delete `modsecurity/config.json` so it doesn't show up as an add-on. Should be built as a 'generic' build with `modsecurity/build.json` instead

--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -36,7 +36,7 @@
       "default": "str",
       "servers": "str"
     },
-    "security_mode": "str"
+    "security_mode": "list(DetectionOnly|On|Off)"
   },
   "image": "homeassistant/{arch}-addon-nginx_proxy"
 }
