--- a/nginx_proxy/modsecurity/Dockerfile
+++ b/nginx_proxy/modsecurity/Dockerfile
@@ -3,7 +3,7 @@ ARG BUILD_FROM
 FROM ${BUILD_FROM}
 
 ARG NGINX_VERSION=1.16.1
-ARG MODSEC_BRANCH=v3.0.4
+ARG MODSEC_BRANCH=v3/master
 ARG OWASP_BRANCH=v3.3/master
 
 WORKDIR /opt
