Fix syntax error

--- a/dnsmasq/config.json
+++ b/dnsmasq/config.json
@@ -15,7 +15,7 @@
   "options": {
     "defaults": ["8.8.8.8", "8.8.4.4"],
     "forwards": [],
-    "hosts": []
+    "hosts": [],
     "srv-hosts": []
   },
   "schema": {
