Add support for extra options

--- a/dnsmasq/config.json
+++ b/dnsmasq/config.json
@@ -40,6 +40,11 @@
         "priority": "int",
         "weight": "int"
       }
+    ],
+    "extra-options": [
+      {
+          "option": "str"
+      }
     ]
   },
   "image": "homeassistant/{arch}-addon-dnsmasq"
