--- a/homematic/config.json
+++ b/homematic/config.json
@@ -1,6 +1,6 @@
 {
   "name": "HomeMatic CCU",
-  "version": "11.0.6",
+  "version": "11.0.7",
   "slug": "homematic",
   "description": "HomeMatic central based on OCCU",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/homematic",
@@ -9,7 +9,6 @@
   "startup": "system",
   "boot": "auto",
   "timeout": 15,
-  "auto_uart": true,
   "gpio": true,
   "apparmor": false,
   "ingress": true,
@@ -37,7 +36,7 @@
     "rf": [
       {
         "type": "match(CCU2)",
-        "device": "match(^/dev/.*$)",
+        "device": "device(subsystem=tty)",
         "reset": "bool?"
       }
     ],
@@ -53,7 +52,7 @@
     "hmip": [
       {
         "type": "match(HMIP_CCU2)",
-        "device": "match(^/dev/.*$)"
+        "device": "device(subsystem=tty)"
       }
     ],
     "regahss_reset": "bool?"
