Update more changelogs

--- a/tellstick/Dockerfile
+++ b/tellstick/Dockerfile
@@ -4,7 +4,10 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 # Install Telldus library for TellStick (using same approach as in hassio docker installation)
-RUN apk add --no-cache \
+ARG TELLDUS_COMMIT
+RUN \
+    set -x \
+    && apk add --no-cache \
         confuse \
         libftdi1 \
         libstdc++ \
@@ -21,8 +24,9 @@ RUN apk add --no-cache \
     && ln -s /usr/include/libftdi1/ftdi.h /usr/include/ftdi.h \
     && mkdir -p /usr/src \
     && cd /usr/src \
-    && git clone -b master --depth 1 https://github.com/telldus/telldus \
+    && git clone https://github.com/telldus/telldus \
     && cd telldus/telldus-core \
+    && git reset --hard ${TELLDUS_COMMIT} \
     && sed -i \
         "/\<sys\/socket.h\>/a \#include \<sys\/select.h\>" \
         common/Socket_unix.cpp \
