Fix config style for new Supervisor/Hardware (#1825)
* New Supervisor Hardware

* Update more changelogs

* fix version

* Fix boot

* fix application

--- a/homematic/config.json
+++ b/homematic/config.json
@@ -1,15 +1,13 @@
 {
   "name": "HomeMatic CCU",
-  "version": "11.0.6",
+  "version": "11.1.0",
   "slug": "homematic",
   "description": "HomeMatic central based on OCCU",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/homematic",
   "arch": ["armv7", "i386"],
   "map": ["share:rw"],
   "startup": "system",
-  "boot": "auto",
   "timeout": 15,
-  "auto_uart": true,
   "gpio": true,
   "apparmor": false,
   "ingress": true,
@@ -37,7 +35,7 @@
     "rf": [
       {
         "type": "match(CCU2)",
-        "device": "match(^/dev/.*$)",
+        "device": "device(subsystem=tty)",
         "reset": "bool?"
       }
     ],
@@ -53,7 +51,7 @@
     "hmip": [
       {
         "type": "match(HMIP_CCU2)",
-        "device": "match(^/dev/.*$)"
+        "device": "device(subsystem=tty)"
       }
     ],
     "regahss_reset": "bool?"
