--- a/ssh/config.json
+++ b/ssh/config.json
@@ -12,11 +12,10 @@
   "ingress": true,
   "panel_icon": "mdi:console",
   "panel_title": "Terminal",
-  "boot": "auto",
   "hassio_api": true,
   "hassio_role": "manager",
   "audio": true,
-  "auto_uart": true,
+  "uart": true,
   "ports": {
     "22/tcp": null
   },
