--- a/tellstick/config.json
+++ b/tellstick/config.json
@@ -1,14 +1,13 @@
 {
   "name": "TellStick",
-  "version": "2.0",
+  "version": "2.1.0",
   "slug": "tellstick",
   "description": "TellStick and TellStick Duo service",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/tellstick",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "system",
   "stdin": true,
-  "boot": "auto",
-  "devices": ["/dev/bus/usb:/dev/bus/usb:rwm"],
+  "usb": true,
   "options": {
     "devices": [
       {
