--- a/zwave_js/Dockerfile
+++ b/zwave_js/Dockerfile
@@ -2,6 +2,7 @@ ARG BUILD_FROM
 FROM ${BUILD_FROM}
 
 ARG ZWAVEJS_SERVER_VERSION
+ARG ZWAVEJS_VERSION
 
 # Install Z-Wave JS
 WORKDIR /usr/src
@@ -17,7 +18,7 @@ RUN \
         python3 \
     \
     && npm config set unsafe-perm \
-    && npm install -g @zwave-js/server@${ZWAVEJS_SERVER_VERSION} \
+    && npm install -g @zwave-js/server@${ZWAVEJS_SERVER_VERSION} zwave-js@${ZWAVEJS_VERSION} \
     \
     && apk del --no-cache \
         .build-dependencies
