Update config.json to allow the use of tcp socket
Underlying zwave-js and zwave-js-server supports the use of tcp://ip:port to connect serial over TCP to a zwave stick.

Is this the correct way about allowing the TCP path to be entered into the addon configuration?

--- a/zwave_js/config.json
+++ b/zwave_js/config.json
@@ -21,7 +21,7 @@
     "network_key": ""
   },
   "schema": {
-    "device": "device(subsystem=tty)",
+    "device": "str",
     "network_key": "match(|[0-9a-fA-F]{32,32})",
     "emulate_hardware": "bool?"
   },
