--- a/dnsmasq/rootfs/usr/share/tempio/dnsmasq.config
+++ b/dnsmasq/rootfs/usr/share/tempio/dnsmasq.config
@@ -7,7 +7,7 @@ server={{.}}
 
 # Domain forwards
 {{range .forwards}}
-server=/{{.domain}}/{{.server}}{{.domain}}
+server=/{{.domain}}/{{.server}}
 {{end}}
 
 # Static hosts
