Support srv-host records (#1824)
* Support srv-host records

* Fix syntax error

* Update docs

* Update ver

* Add support for extra options

* Update docs

* Apply PR feedback

* Use tempio

* Rename extra-options to extra_options

* Fix stupid mistake

* Fix docs

* Fix mistake

* Remove extra_options

* Apply PR feedback

* Update change log

--- a/dnsmasq/config.json
+++ b/dnsmasq/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Dnsmasq",
-  "version": "1.3",
+  "version": "1.4",
   "slug": "dnsmasq",
   "description": "A simple DNS server",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/dnsmasq",
@@ -14,7 +14,8 @@
   "options": {
     "defaults": ["8.8.8.8", "8.8.4.4"],
     "forwards": [],
-    "hosts": []
+    "hosts": [],
+    "services": []
   },
   "schema": {
     "defaults": ["str"],
@@ -28,6 +29,15 @@
       {
         "host": "str",
         "ip": "str"
+      }
+    ],
+    "services": [
+      {
+        "srv": "str",
+        "host": "str",
+        "port": "str",
+        "priority": "int",
+        "weight": "int"
       }
     ]
   },
