--- a/dnsmasq/config.json
+++ b/dnsmasq/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Dnsmasq",
-  "version": "1.4",
+  "version": "1.3",
   "slug": "dnsmasq",
   "description": "A simple DNS server",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/dnsmasq",
@@ -14,8 +14,7 @@
   "options": {
     "defaults": ["8.8.8.8", "8.8.4.4"],
     "forwards": [],
-    "hosts": [],
-    "services": []
+    "hosts": []
   },
   "schema": {
     "defaults": ["str"],
@@ -29,15 +28,6 @@
       {
         "host": "str",
         "ip": "str"
-      }
-    ],
-    "services": [
-      {
-        "srv": "str",
-        "host": "str",
-        "port": "str",
-        "priority": "int",
-        "weight": "int"
       }
     ]
   },
