--- a/dnsmasq/rootfs/usr/share/tempio/dnsmasq.config
+++ b/dnsmasq/rootfs/usr/share/tempio/dnsmasq.config
@@ -1,5 +1,13 @@
 # Automatically generated do not edit
 
+no-resolv
+no-hosts
+keep-in-foreground
+log-queries
+log-facility=-
+no-poll
+user=root
+
 # Default forward servers
 {{ range .defaults }}
 server={{ . }}
