Add client_max_body_size to fix snaphost upload via web
0 disable check client_max_body_size .

--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -12,6 +12,7 @@ http {
         ''      close;
     }
     
+    client_max_body_size    0;
     server_names_hash_bucket_size 64;
 	
     #include /data/cloudflare.conf;
