Apply PR feedback

--- a/dnsmasq/config.json
+++ b/dnsmasq/config.json
@@ -7,6 +7,7 @@
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "advanced": true,
   "startup": "system",
+  "init": false,
   "ports": {
     "53/tcp": 53,
     "53/udp": 53
