Revert "Support svr host (#1853)"
This reverts commit ef8a6793f431d931cd7422951530955aa615ac11.

--- a/dnsmasq/Dockerfile
+++ b/dnsmasq/Dockerfile
@@ -8,5 +8,7 @@ ENV LANG C.UTF-8
 RUN apk add --no-cache dnsmasq
 
 # Copy data
-COPY rootfs /
+COPY data/run.sh /
+COPY data/dnsmasq.conf /etc/
 
+CMD [ "/run.sh" ]
