--- a/dnsmasq/config.json
+++ b/dnsmasq/config.json
@@ -1,13 +1,12 @@
 {
   "name": "Dnsmasq",
-  "version": "1.4",
+  "version": "1.3",
   "slug": "dnsmasq",
   "description": "A simple DNS server",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/dnsmasq",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "advanced": true,
   "startup": "system",
-  "init": false,
   "ports": {
     "53/tcp": 53,
     "53/udp": 53
@@ -15,8 +14,7 @@
   "options": {
     "defaults": ["8.8.8.8", "8.8.4.4"],
     "forwards": [],
-    "hosts": [],
-    "services": []
+    "hosts": []
   },
   "schema": {
     "defaults": ["str"],
@@ -30,15 +28,6 @@
       {
         "host": "str",
         "ip": "str"
-      }
-    ],
-    "services": [
-      {
-        "srv": "str",
-        "host": "str",
-        "port": "str",
-        "priority": "int",
-        "weight": "int"
       }
     ]
   },
