Use Alpine for almond

--- a/almond/Dockerfile
+++ b/almond/Dockerfile
@@ -9,31 +9,22 @@ ENV \
 
 WORKDIR /opt/almond
 ARG ALMOND_VERSION
+
 RUN \
     set -x \
-    && apt-get update \
-    && apt-get install -y --no-install-recommends \
-        build-essential \
-        git \
-        gnupg \
-        nginx \
-        python-dev \
-        software-properties-common \
-        unzip \
-    \
-    && curl -sS https://deb.nodesource.com/gpgkey/nodesource.gpg.key \
-        | apt-key add - \
-    && curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg \
-        | apt-key add - \
-    && echo "deb https://deb.nodesource.com/node_12.x buster main" \
-        > /etc/apt/sources.list.d/nodesource.list \
-    && echo "deb https://dl.yarnpkg.com/debian/ stable main" \
-        > /etc/apt/sources.list.d/yarn.list \
-    \
-    && apt-get update \
-    && apt-get install -y --no-install-recommends \
+    && apk add --no-cache \
         nodejs \
+        npm \
         yarn \
+        nginx \
+        unzip \
+    && apk add --no-cache --virtual .build-dependencies \
+        build-base \
+        git \
+        linux-headers \
+        python3 \
+    \
+    && npm config set unsafe-perm \
     \
     && git clone -b "${ALMOND_VERSION}" --depth 1 \
         "https://github.com/stanford-oval/almond-server" . \
@@ -49,13 +40,6 @@ RUN \
     && yarn global remove modclean \
     \
     && yarn cache clean \
-    && apt-get purge -y --auto-remove \
-        build-essential \
-        git \
-        gnupg \
-        python-dev \
-        software-properties-common \
-        yarn \
     && rm -rf \
         /opt/almond/.[!.]* \
         /root/.cache \
@@ -67,5 +51,9 @@ RUN \
         /usr/local/share/.config \
         /var/lib/apt/lists/* \
         /var/www
+
+    \
+    && apk del --no-cache \
+        .build-dependencies
 
 COPY rootfs /
