--- a/vlc/rootfs/usr/share/tempio/nginx.conf
+++ b/vlc/rootfs/usr/share/tempio/nginx.conf
@@ -49,7 +49,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
-            proxy_set_header Authorization "Basic OklOR1JFU1M=";
+            proxy_set_header Authorization "Basic {{ .ingress_secret }}";
         }
     }
 }
