Update ModSecurity configuration for nginx_proxy
Switch to a configuration format for modsecurity similar to the `customize` option. This has two primary benefits:

1. If ModSecurity is not being used, we can avoid having nginx load the ModSecurity module completely to minimize the possibility of side effects from loading ModSecurity (e.g. potential memory leaks, increase in memory usage, etc)
2. Allow for easier customization of ModSecurity configuration in the future if/when additional use cases arise. For example, allowing for user-specified rulesets to be used.

--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -23,7 +23,10 @@
       "default": "nginx_proxy_default*.conf",
       "servers": "nginx_proxy/*.conf"
     },
-    "security_mode": "DetectionOnly"
+    "security": {
+      "active": false,
+      "mode": "DetectionOnly"
+    }
   },
   "schema": {
     "domain": "str",
@@ -36,7 +39,10 @@
       "default": "str",
       "servers": "str"
     },
-    "security_mode": "list(DetectionOnly|On|Off)"
+    "security": {
+      "active": "bool",
+      "mode": "list(DetectionOnly|On)"
+    }
   },
   "image": "homeassistant/{arch}-addon-nginx_proxy"
 }
