--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -3,7 +3,7 @@ error_log stderr;
 pid /var/run/nginx.pid;
 
 # Nginx ModSecurity Connector
-load_module modules/ngx_http_modsecurity_module.so;
+#load_module modules/ngx_http_modsecurity_module.so;
 
 events {
 	worker_connections 1024;
@@ -18,8 +18,8 @@ http {
     server_names_hash_bucket_size 64;
 
     # enable modsecurity
-    modsecurity on;
-    modsecurity_rules_file /etc/nginx/modsec/main.conf;
+    #modsecurity on;
+    #modsecurity_rules_file /etc/nginx/modsec/main.conf;
 
     #include /data/cloudflare.conf;
 
