--- a/vlc/config.json
+++ b/vlc/config.json
@@ -2,7 +2,7 @@
   "name": "VLC",
   "version": "0.1.2",
   "slug": "vlc",
-  "description": "Turn you device into a Media Player with VLC",
+  "description": "Turn your device into a Media Player with VLC",
   "arch": ["amd64", "i386", "armv7", "aarch64"],
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/vlc",
   "startup": "services",
