--- a/mariadb/config.json
+++ b/mariadb/config.json
@@ -25,7 +25,13 @@
   "schema": {
     "databases": ["str"],
     "logins": [{ "username": "str", "password": "password" }],
-    "rights": [{ "username": "str", "database": "str", "privileges": "str?" }]
+    "rights": [
+      {
+        "username": "str",
+        "database": "str",
+        "privileges": "match(^((ALTER|CREATE|CREATE ROUTINE|CREATE TEMPORARY TABLES|CREATE VIEW|DELETE|DELETE HISTORY|DROP|EVENT|GRANT OPTION|INDEX|INSERT|LOCK TABLES|SELECT|SHOW VIEW|TRIGGER|UPDATE)(, (?!$)|$))+$)?"
+      }
+    ]
   },
   "image": "homeassistant/{arch}-addon-mariadb"
 }
