--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -20,8 +20,8 @@ http {
         server_name _;
         listen 80 default_server;
         listen 443 ssl http2 default_server;
-        ssl_certificate /data/ssl-cert-snakeoil.pem;
-        ssl_certificate_key /data/ssl-cert-snakeoil.key;
+        ssl_certificate %%FALLBACK_CERT%%;
+        ssl_certificate_key %%FALLBACK_KEY%%;
         return 444;
     }
 
