Move build args for adding modsecurity to nginx_proxy to build.json

--- a/nginx_proxy/Dockerfile
+++ b/nginx_proxy/Dockerfile
@@ -2,9 +2,9 @@ ARG BUILD_FROM
 
 FROM ${BUILD_FROM} as build_modsecurity
 
-ARG NGINX_VERSION=1.16.1
-ARG MODSEC_BRANCH=v3/master
-ARG OWASP_BRANCH=v3.3/master
+ARG NGINX_VERSION
+ARG MODSEC_BRANCH
+ARG OWASP_BRANCH
 
 WORKDIR /opt
 
