Expose log level as a configuration option

--- a/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
+++ b/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
@@ -1,7 +1,7 @@
 {
     "logConfig": {
         "enabled": true,
-        "level": {{ if eq .logging "debug" }}5{{ else }}2{{ end }},
+        "level": "{{ .log_level }}",
         "forceConsole": true
     },
     "storage": {
