--- a/zwave_js/config.json
+++ b/zwave_js/config.json
@@ -24,7 +24,7 @@
   "schema": {
     "device": "device(subsystem=tty)",
     "network_key": "match(|[0-9a-fA-F]{32,32})",
-    "log_level": "list(silly|debug|verbose|http|info|warn|error)",
+    "log_level": "list(silly|debug|verbose|http|info|warn|error)?",
     "emulate_hardware": "bool?"
   },
   "image": "homeassistant/{arch}-addon-zwave_js"
