Added privilege control per user/db to MariaDB (#1941)
* Added privilege control per user/db

* Fixes from feedback

* Using list config and added example

--- a/mariadb/config.json
+++ b/mariadb/config.json
@@ -25,7 +25,15 @@
   "schema": {
     "databases": ["str"],
     "logins": [{ "username": "str", "password": "password" }],
-    "rights": [{ "username": "str", "database": "str" }]
+    "rights": [
+      {
+        "username": "str",
+        "database": "str",
+        "privileges": [
+          "list(ALTER|CREATE|CREATE ROUTINE|CREATE TEMPORARY TABLES|CREATE VIEW|DELETE|DELETE HISTORY|DROP|EVENT|GRANT OPTION|INDEX|INSERT|LOCK TABLES|SELECT|SHOW VIEW|TRIGGER|UPDATE)?"
+        ]
+      }
+    ]
   },
   "image": "homeassistant/{arch}-addon-mariadb"
 }
