Add proxy_pass customizability
Allow users to customize the proxy_pass parameter in nginx.conf

--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -16,6 +16,7 @@
     "keyfile": "privkey.pem",
     "hsts": "max-age=31536000; includeSubDomains",
     "cloudflare": false,
+	"proxypass": "http://homeassistant.local.hass.io:8123",
     "customize": {
       "active": false,
       "default": "nginx_proxy_default*.conf",
