--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -58,7 +58,7 @@ http {
         #include /share/nginx_proxy_default*.conf;
 
         location / {
-            proxy_pass http://homeassistant.local.hass.io:8123;
+            proxy_pass %%PROXYPASS%%;
             proxy_set_header Host $host;
             proxy_redirect http:// https://;
             proxy_http_version 1.1;
