Use WORKSPACE_DIRECTORY  for add-on directory

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,3 @@
-// Based on https://github.com/issacg/hassio-addon-devcontainer
 {
 	"name": "Home Assistant Add-Ons",
 	"context": "..",
@@ -6,6 +5,9 @@
 	"appPort": ["7123:8123", "7357:4357"],
     "postStartCommand": "service docker start",
 	"runArgs": ["-e", "GIT_EDITOR=code --wait", "--privileged"],
+	"containerEnv": {
+		"WORKSPACE_DIRECTORY": "${containerWorkspaceFolder}"
+	},
 	"extensions": [
 		"timonwong.shellcheck",
 		"esbenp.prettier-vscode"
