--- a/mosquitto/config.json
+++ b/mosquitto/config.json
@@ -9,6 +9,7 @@
   "map": ["ssl", "share"],
   "discovery": ["mqtt"],
   "services": ["mqtt:provide"],
+  "watchdog": "tcp://[HOST]:1883",
   "auth_api": true,
   "ports": {
     "1883/tcp": 1883,
