--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -1,6 +1,9 @@
 ARG BUILD_FROM=ghcr.io/home-assistant/amd64-base:3.13
 FROM $BUILD_FROM
 
+# Set shell
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
 # Install mosquitto + auth plugin
 WORKDIR /usr/src
 ARG MOSQUITTO_AUTH_VERSION
