--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -1,8 +1,5 @@
-ARG BUILD_FROM=ghcr.io/home-assistant/amd64-base:3.13
+ARG BUILD_FROM
 FROM $BUILD_FROM
-
-# Set shell
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install mosquitto + auth plugin
 WORKDIR /usr/src
