--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -5,12 +5,9 @@ FROM $BUILD_FROM
 WORKDIR /usr/src
 ARG MOSQUITTO_AUTH_VERSION
 RUN apk add --no-cache \
-        curl \
         mosquitto \
-        musl \
-        openssl \
+        nginx \
         pwgen \
-        socat \
     && apk add --no-cache --virtual .build-dependencies \
         build-base \
         curl-dev \
@@ -20,19 +17,25 @@ RUN apk add --no-cache \
     \
     && git clone --depth 1 -b "${MOSQUITTO_AUTH_VERSION}" \
         https://github.com/pvizeli/mosquitto-auth-plug \
+    \
     && cd mosquitto-auth-plug \
     && cp config.mk.in config.mk \
     && make \
     && mkdir -p /usr/share/mosquitto \
     && cp -f auth-plug.so /usr/share/mosquitto \
+    && cp -f np /usr/local/bin \
     \
-    && apk del .build-dependencies \
-    && rm -fr /usr/src/mosquitto-auth-plug
+    && apk del --no-cache .build-dependencies \
+    && rm -fr \
+        /etc/logrotate.d \
+        /etc/mosquitto/* \
+        /etc/nginx/* \
+        /usr/share/nginx \
+        /usr/src/mosquitto-auth-plug \
+        /var/lib/nginx/html \
+        /var/www
 
-# Copy data
-COPY data/run.sh /
-COPY data/auth_srv.sh /bin/
-COPY data/mosquitto.conf /etc/
+# Copy rootfs
+COPY rootfs /
 
 WORKDIR /
-CMD [ "/run.sh" ]
